# Distributed-Firewall-Control-Plane-OS-Simulator

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
.github/workflows/: c-cpp.yml
audit/: audit_logger.cpp  audit_logger.h  audit_logger.hpp
auth/: saml_validator.cpp  saml_validator.h
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
build3/: CMakeCache.txt  Makefile  cmake_install.cmake  fwos-x
cli/:  ssh_server.h  ssh_server.cpp
cluster/: cluster_manager.cpp  cluster_manager.hpp
config/: config_engine.cpp  config_engine.h  wal.cpp  wal.h
core/: control_plane.cpp  control_plane.h  control_plane.hpp
engine/: cluster_manager.cpp  cluster_manager.h  distributed_policy.cpp  distributed_policy.h  policy_engine.cpp  policy_engine.h
include/: distributed_policy.h  node.h  policy_engine.h  session_table.h  thread_pool.h
policy/: policy_engine.cpp  policy_engine.hpp
session/: session_table.cpp  session_table.hpp
telemetry/: metrics.cpp  metrics.hpp  snmp_agent.cpp  snmp_agent.h
tls/: tls_lifecycle.cpp  tls_lifecycle.h
util/: logger.cpp  logger.hpp  thread_safe_queue.h
worker/: thread_pool.cpp  thread_pool.h  thread_pool.hpp
